[package]
name = "rangeindex"
version = "0.1.0"
authors = ["IM <godmir@verizon.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8" }
wasm-bindgen = { version = "0.2" }
getrandom = { features = ["js"] }
